// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`treeMapChart > renders complex content with React components 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div
        data-testid="treemap-mock"
        style="height: 500px; position: relative; width: 1000px;"
      >
        <div
          data-testid="node-compute"
        >
          <div
            class="styles__1pnrimq1"
            style="background-color: #641cb3FC; height: 96px; left: 2px; top: 2px; width: 96px;"
          >
            <div
              class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_true__m4c9ow6 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_captionStrong__m4c9owy style_undefined_compound_72__m4c9ow3f"
            >
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <p
                  class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_72__m4c9ow3f"
                >
                  Compute
                </p>
                <p
                  class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_72__m4c9ow3f"
                >
                  10 kgco2
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="node-network"
        >
          <div
            class="styles__1pnrimq1"
            style="background-color: #641cb3E3; height: 96px; left: 102px; top: 2px; width: 96px;"
          >
            <div
              class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_true__m4c9ow6 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_captionStrong__m4c9owy style_undefined_compound_72__m4c9ow3f"
            >
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <p
                  class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_72__m4c9ow3f"
                >
                  Network
                </p>
                <p
                  class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_72__m4c9ow3f"
                >
                  10 kgco2
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="node-ai"
        >
          <div
            class="styles__1pnrimq1"
            style="background-color: #641cb3C9; height: 96px; left: 202px; top: 2px; width: 96px;"
          >
            <div
              class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_true__m4c9ow6 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_captionStrong__m4c9owy style_undefined_compound_72__m4c9ow3f"
            >
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <p
                  class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_72__m4c9ow3f"
                >
                  AI
                </p>
                <p
                  class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_72__m4c9ow3f"
                >
                  10 kgco2
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`treeMapChart > renders correctly with data 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div
        data-testid="treemap-mock"
        style="height: 500px; position: relative; width: 1000px;"
      >
        <div
          data-testid="node-compute"
        >
          <div
            class="styles__1pnrimq1"
            style="background-color: #641cb3FC; height: 96px; left: 2px; top: 2px; width: 96px;"
          >
            <div
              class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_true__m4c9ow6 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_captionStrong__m4c9owy style_undefined_compound_72__m4c9ow3f"
            >
              Compute
            </div>
          </div>
        </div>
        <div
          data-testid="node-network"
        >
          <div
            class="styles__1pnrimq1"
            style="background-color: #641cb3E3; height: 96px; left: 102px; top: 2px; width: 96px;"
          >
            <div
              class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_true__m4c9ow6 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_captionStrong__m4c9owy style_undefined_compound_72__m4c9ow3f"
            >
              Network
            </div>
          </div>
        </div>
        <div
          data-testid="node-ai"
        >
          <div
            class="styles__1pnrimq1"
            style="background-color: #641cb3C9; height: 96px; left: 202px; top: 2px; width: 96px;"
          >
            <div
              class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_true__m4c9ow6 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_captionStrong__m4c9owy style_undefined_compound_72__m4c9ow3f"
            >
              AI
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
